--- a/code/src/index.css
+++ b/code/src/index.css
@@ -16,12 +16,10 @@ body {
   border: 1px solid #000;
   padding: 15px;
   box-shadow: #000 6px 6px;
-
 }
 
 .happy-form {
   background-color: #d4d3d3;
-
 }
 
 .happy-form textarea {
@@ -37,7 +35,6 @@ button {
   padding: 7px 12px;
   font-family: "Ubuntu Mono", "Courier New", monospace;
   cursor: pointer;
-
 }
 
 .happy-thought {
@@ -47,7 +44,6 @@ button {
 p.thought-message {
   margin: 0 0 20px 0;
 }
-
 
 .thought-footer {
   display: flex;
@@ -76,3 +72,6 @@ p.thought-message {
   margin-left: 10px;
 }
 
+.zeroClicks {
+  background-color: #d4d3d3;
+}
