--- a/code/src/index.css
+++ b/code/src/index.css
@@ -63,10 +63,10 @@ textarea {
   width: 50px;
   height: 50px;
   border-radius: 50%;
-  margin: 10px 0px 0px 0px;
+  /* margin: 2px 0px 0px 0px; */
 }
 
 .date-text {
   float: right;
-  margin: 25px 0px;
+  margin: 10px 0px;
 }
