Fix render method of entry.js

--- a/happy-thoughts/src/index.css
+++ b/happy-thoughts/src/index.css
@@ -40,10 +40,11 @@ li {
 }
 
 .loader {
-   display: flex;
+  display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  padding-top: 50px;
 }
 
 .cards {
