--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,49 +6,44 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
 }
-
-/* FORM PART  */
-
+/********FORM PARTS**********/
 form {
-  border: black 1px solid;
-  width: 400px;
+  border: 1px solid #000;
+  width: 250px;
   background-color: lightgray;
+  padding: 10px;
+  margin-bottom: 20px;
+  box-shadow: 8px 8px;
   display: flex;
   flex-direction: column;
-  padding: 10px;
-  box-shadow: 8px 8px;
-  margin-bottom: 20px;
 }
 .header-text {
   font-size: 14px;
   font-weight: bold;
 }
-
 .input {
   height: 70px;
-  display: flex;
   margin-bottom: 13px;
 }
-
 .form-button {
   background-color: pink;
-  border-radius: 25px;
   border: none;
+  border-radius: 25px;
   height: 40px;
   width: 206px;
 }
-
-/* MESSAGE PART*/
+/*******MESSAGE PART***********/
 .message-container {
-  border: black 1px solid;
+  border: 1px solid #000;
   background-color: #fff;
-  width: 400px;
+  width: 250px;
   padding: 10px;
   box-shadow: 8px 8px;
   margin-bottom: 20px;
 }
-
 .input-container {
   display: flex;
   justify-content: space-between;
@@ -59,16 +54,37 @@ form {
   width: 40px;
   height: 40px;
 }
+.heart-button:hover {
+  background-color: pink;
+}
 .likes-container {
   display: flex;
   flex-direction: row;
 }
-
 .x-heart {
   font-size: 12px;
   padding-left: 5px;
 }
-
 .time {
   font-size: 12px;
+}
+
+@media (min-width: 668px) {
+  form {
+    width: 400px;
+  }
+
+  .message-container {
+    width: 400px;
+  }
+}
+
+@media screen and (min-width: 1025px) {
+  form {
+    width: 600px;
+  }
+
+  .message-container {
+    width: 600px;
+  }
 }
