--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,4 +1,3 @@
-
 body {
   margin: 20px;
   font-family: "Roboto Mono", monospace;
@@ -82,6 +81,16 @@ form {
 
 .time {
   font-size: 12px;
+}
+
+.heart {
+  padding: 5px;
+}
+
+.text-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 @media screen and (min-width: 668px) {
