--- a/code/src/index.css
+++ b/code/src/index.css
@@ -9,16 +9,8 @@
 }
 
 body {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
+  font-family: "Roboto Mono", monospace;
   -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
 }
 
 .message-card {
@@ -26,10 +18,11 @@ code {
   border: 1px solid;
   padding: 25px;
   box-shadow: 5px 5px 0px 0px #000;
-  /* display: grid;
-  grid-template-columns: 1, 1fr; */
-  /*display: flex;*/
-  /* align-items: center;
-  flex-wrap: wrap; */ 
+  width: 300px;
 }
 
+.post-time {
+display: flex;  
+justify-content:flex-end;
+color: grey;
+}
