--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,122 +1,106 @@
-/* body {
+html,
+body {
   margin: 0;
+  padding: 0;
+}
+
+body {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   font-family: "Trispace", sans-serif;
-  background-color: #ffadad;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
-}
-
-.date {
-  font-style: italic;
 }
 
 .main-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  margin: 25px;
-  word-break: break-word;
+  padding: 0 15px;
+  box-sizing: border-box;
+  width: 400px;
+  margin: 0 auto;
 }
 
-form {
+.form-container {
   display: flex;
-  flex-direction: column;
-  border: solid 1px black;
-  padding: 20px;
+  flex-direction: row;
+  align-items: baseline;
+  justify-content: space-between;
+}
+
+.card {
+  box-sizing: border-box;
+  border: 1px solid #000;
+  margin: 20px 0;
+  padding: 15px;
   box-shadow: 5px 5px;
-  background-color: #f5f5f5;
-  font-size: 14px;
-  margin-bottom: 20px;
+  overflow-wrap: break-word;
 }
 
-label {
-  font-weight: bold;
+.card p {
+  margin: 0;
+}
+
+.form {
+  background-color: #e4e4e4;
 }
 
 textarea {
-  padding: 10px;
-  margin-top: 10px;
-  margin-bottom: 10px;
-  min-height: 60px;
-  width: 90%;
-  border: solid 2px rgba(0, 0, 0, 0.2);
+  margin: 15px 0 10px;
+  width: 100%;
+  box-sizing: border-box;
 }
 
 .submit-button {
-  background-color: #ffadad;
+  border: none;
   border-radius: 20px;
-  border: none;
+  background-color: #ffadad;
   padding: 10px;
-  width: 250px;
-  transition: all 0.2s ease-in-out;
-  font-weight: bold;
 }
 
-.submit-button:hover {
-  transform: scale(1.1);
+.form p {
+  color: rgba(0, 0, 0, 0.3);
+  font-size: 14px;
 }
 
-.new-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-content: center;
-  margin: 30px 0;
-  width: 90%;
-  max-width: 500px;
+.thought-text {
+  margin: 0;
+  padding: 10px 0;
+  min-height: 35px;
 }
 
-.new-thoughts-card {
-  border: solid 1px black;
-  padding: 20px;
-  box-shadow: 5px 5px;
-  background-color: white;
-  margin-bottom: 30px;
-}
-
-.like-button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border: none;
-  border-radius: 50%;
-  width: 40px;
-  height: 40px;
-  transition: all 0.2s ease-in-out;
-}
-
-.like-button:hover {
-  transform: scale(1.1);
-}
-
+.likes,
 .button-card {
   display: flex;
   flex-direction: row;
+  align-items: baseline;
 }
 
 .likes {
-  display: flex;
-  flex-direction: row;
   justify-content: space-between;
-  align-items: center;
 }
 
-.likes-amount {
-  font-size: 12px;
-  margin-left: 5px;
-  color: rgba(0, 0, 0, 0.5);
+.like-button {
+  margin-right: 10px;
+  border: none;
+  border-radius: 50%;
+  height: 38px;
+  width: 38px;
 }
 
 .date {
   font-size: 12px;
   color: rgba(0, 0, 0, 0.3);
-} */
+  text-align: right;
+}
+
+@media (min-width: 768px) {
+  .main-container {
+    width: 450px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .main-container {
+    width: 500px;
+  }
+}
