--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,99 @@
+* {
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  width: 100vw;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+.main {
+  width: 450px;
+  display: flex;
+  justify-content: center;
+  margin: 0 auto;
+  flex-direction: column;
+}
+
+.form {
+  width: 100%;
+  display: flex;
+  padding: 1rem;
+  flex-direction: column;
+  background-color: rgb(242, 240, 240);
+  border: 1px solid black;
+  box-shadow: 7px 7px black;
+  margin-top: 2rem;
+}
+
+.thought {
+  width: 100%;
+}
+
+.thought-input {
+  width: 100%;
+}
+
+.submit {
+  background-color: rgba(255, 173, 173, 0.5);
+  height: 2rem;
+  width: 12rem;
+  border-radius: 1rem;
+  border: none;
+  margin: 1rem 0;
+  cursor: pointer;
+}
+
+.submit:hover {
+  background-color: rgba(255, 173, 173, 1);
+}
+
+.lists {
+  list-style-type: none;
+  padding-left: 0;
+}
+.item {
+  width: 100%;
+  background-color: white;
+  border: 1px solid black;
+  box-shadow: 7px 7px black;
+  margin-top: 1.5rem;
+  padding: 1rem;
+}
+
+.item-attributes {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.heart-button {
+  width: 2rem;
+  height: 2rem;
+  border-radius: 1rem;
+  border: none;
+  background-color: rgba(242, 240, 240, 1);
+  margin-right: 0.5rem;
+  cursor: pointer;
+}
+
+.heart-button:hover {
+  background-color: rgba(255, 173, 173, 1);
+}
+
+.posted,
+.count {
+  color: grey;
+}
+
+.alert {
+  color: red;
 }
