--- a/code/src/index.css
+++ b/code/src/index.css
@@ -27,14 +27,20 @@ gap: 20px;
   padding: 20px;
   box-shadow: 8px 8px 0px 0px #000000;
   display: flex;
-  align-items: center;
-  flex-wrap: wrap;
+  flex-direction: column;
   background-color: white;
+}
+
+form {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .form-heading {
  font-size: 20px;
 }
+
 
 .textarea {
   margin-top: 7px;
@@ -42,24 +48,36 @@ gap: 20px;
 
 }
 
-.thought-heading {
-  margin: 0px 0 5px 0;
-  flex-basis: 100%;
-  word-break: break-word;
+.caracters-left {
+  margin-top: 5px;
+  font-size: 10px;
+  color: gray;
 }
 
 .likesWrapper {
   display: flex;
   flex-direction: row;
   align-items: center;
-  width: 80%;
+  width: 100%;
+  justify-content: space-between;
 }
+
+.button-and-like {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+
+}
+
 
 .heart-button {
   border-radius: 50%;
   margin-right: 5px;
   color: red;
   background-color: pink;
+  width: 30px;
+  height: 30px;
+  
 }
 
 .numberOfLikes {
