--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,18 +1,127 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 600;
+  box-sizing: border-box;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: var(--clr-white);
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+  font-family: "Roboto Mono", monospace;
 }
-.input {
+
+:root {
+  --clr-black: #111111;
+  --clr-white: #fff;
+  --clr-primary: #f7f1f1;
+  --clr-secondary: #d1c4c4;
+  --clr-accent: #f8c4c4;
+}
+.main {
+  max-width: 600px;
+  margin: auto;
+}
+
+h1 {
+  font-family: "Shrikhand", cursive;
+  font-size: 40px;
+}
+.input-wrap,
+.thought-card {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  border: 1px solid var(--clr-black);
+  box-shadow: 8px 8px var(--clr-black);
+  margin: 2em 1em;
+}
+
+.input {
+  background: var(--clr-primary);
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  font-size: 0.8rem;
+  padding: 10px 20px;
+}
+
+.thoughts-container--item {
+  padding: 1em 1em;
+  background: var(--clr-white);
+  overflow-wrap: break-word;
+}
+
+.message-text {
+  font-size: 1.1rem;
+  margin-top: 0;
+}
+
+.likes-container {
+  display: flex;
+}
+
+.like-counter {
+  color: var(--clr-secondary);
+  display: flex;
+  align-items: center;
+  margin: 0 0.5em;
+}
+
+label {
+  margin-bottom: 20px;
+}
+
+textarea,
+textarea:active {
+  font-size: 1rem;
+  outline: none;
+  border: 1px solid var(--clr-secondary);
+  margin-bottom: 20px;
+}
+
+.btn {
+  font-size: 0.9rem;
+  font-family: "Roboto Mono", monospace;
+  font-weight: 400;
+  height: 45px;
+  border: none;
+  color: var(--clr-black);
+  border-radius: 25px;
+  cursor: pointer;
+  margin-bottom: 10px;
+}
+
+.btn:hover {
+  background-color: var(--clr-secondary);
+  transition: all 0.3s ease-in-out;
+}
+
+.heart:hover {
+  transform: scale(1.1);
+  transition: all 0.5s ease-in;
+}
+
+.btn {
+  width: 250px;
+  background: var(--clr-accent);
+  margin-right: 0.25em;
+}
+
+@media (min-width: 668px) {
+  label {
+    font-size: 1.2rem;
+  }
+
+  button {
+    height: 50px;
+  }
+
+  .btn {
+    font-size: 1.1rem;
+    width: 320px;
+  }
 }
