--- a/code/src/index.css
+++ b/code/src/index.css
@@ -14,6 +14,10 @@ code {
 }
 
 .main-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 65vw;
   margin: auto;
 }
@@ -24,4 +28,7 @@ code {
 .thoughts-message {
   border-style: solid;
   margin: 5px;
+  display: flex;
+  flex-direction: column;
+  /* box-shadow: 7px 7px red; */
 }
