--- a/code/src/index.css
+++ b/code/src/index.css
@@ -31,6 +31,8 @@ gap: 20px;
   background-color: white;
 }
 
+/* ----- FORM AREA ----- */
+
 form {
   display: flex;
   align-items: center;
@@ -41,11 +43,9 @@ form {
  font-size: 20px;
 }
 
-
 .textarea {
   margin-top: 7px;
   margin-bottom: 7px;
-
 }
 
 .caracters-left {
@@ -54,42 +54,7 @@ form {
   color: gray;
 }
 
-.likesWrapper {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  width: 100%;
-  justify-content: space-between;
-}
-
-.button-and-like {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-
-}
-
-
-.heart-button {
-  border-radius: 50%;
-  margin-right: 5px;
-  color: red;
-  background-color: pink;
-  width: 30px;
-  height: 30px;
-  
-}
-
-.numberOfLikes {
-  font-size: 10px;
-  margin-right: 10px;
- 
-}
-
-.date {
-  font-size: 12px;
-  color: #818080;
-}
+/* ----- THE BEATING BUTTON ----- */
 
 .heart-beat {
   height: 30px;
@@ -101,7 +66,6 @@ form {
 .read-heart {
   color: red;
 }
-
 
 .heart-beat {
   animation: heartbeat 2s;
@@ -118,6 +82,41 @@ form {
   100% {
     transform: scale(1);
   }
+}
+
+/* ----- THOUGHTS AREA ----- */
+
+.likesWrapper {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  width: 100%;
+  justify-content: space-between;
+}
+
+.button-and-like {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.heart-button {
+  border-radius: 50%;
+  margin-right: 5px;
+  color: red;
+  background-color: pink;
+  width: 30px;
+  height: 30px;
+}
+
+.numberOfLikes {
+  font-size: 10px;
+  margin-right: 10px;
+}
+
+.date {
+  font-size: 12px;
+  color: gray;
 }
 
 
