--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,5 +1,6 @@
 body {
   margin: 0;
+  background-color: rgb(121, 163, 255);
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
@@ -10,4 +11,165 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  word-wrap: break-word;
+}
+
+.letter-counter {
+  font-size: 12px;
+}
+
+.date {
+  color: rgb(165, 165, 165);
+  float: right;
+  margin: 20px 0px;
+  font-size: 12px;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 40px;
+}
+
+.thoughts-wrapper,
+.submit-wrapper {
+  width: 320px;
+  padding: 5px 10px;
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.1),
+               0px 8px 13px rgba(0,0,0,0.1),
+               0px 18px 23px rgba(0,0,0,0.1);
+  background: white;
+}
+
+.submit-wrapper {
+  display: flex;
+  background: rgb(228, 228, 228);
+}
+
+textarea {
+  width: 310px;
+  margin-bottom: 10px;
+}
+
+.like-btn {
+  border: none;
+  background: pink;
+  border-radius: 50%;
+  padding: 2%;
+  width: 40px;
+  margin: 10px 6px 0px 0px;
+}
+
+.like-btn:hover {
+  color: rgb(223, 200, 200);
+  cursor: pointer;
+}
+
+.likes-counter {
+  color: rgb(165, 165, 165);
+  font-size: 12px;
+}
+
+.submit-btn {
+  border: none;
+  background: #f737378e;  
+  border-radius: 30px;
+  padding: 13px 30px;
+  margin-bottom: 10px;
+  cursor: pointer;
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.1),
+               0px 8px 13px rgba(0,0,0,0.1),
+               0px 18px 23px rgba(0,0,0,0.1);
+}
+
+.thought-message {
+  height: 50%;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.load-spinner {
+  width: 80px;
+  height: 80px;
+  border: 10px solid #f73737;
+  border-radius: 50%;
+  border-left: 10px solid #fff;
+  animation: spinner infinite 1s;
+}
+
+@keyframes spinner {
+  0% {
+    transform: rotate(0);
+  }
+  25% {
+    transform: rotate(90);
+  }
+  50% {
+    transform: rotate(180deg);
+  }
+  75% {
+    transform: rotate(270deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.refresh-btn {
+  background-color: #f737378e;
+  font-family: "Trispace", sans-serif;
+  border: none;
+  border-radius: 30px;
+  display: inline-block;
+  cursor: pointer;
+  /* border-radius: 10px; */
+  color: rgb(255, 255, 255);
+  padding: 13px 30px;
+  margin: 10px;
+  margin-bottom: 30px;
+  box-shadow: 0px 4px 3px rgba(0,0,0,0.1),
+               0px 8px 13px rgba(0,0,0,0.1),
+               0px 18px 23px rgba(0,0,0,0.1);
+}
+
+/* ---- MEDIA QUERY FOR DESKTOP AND TABLET ----- */
+
+@media (min-width: 768px) {
+  .thoughts-wrapper,
+  .submit-wrapper {
+    width: 450px;
+    padding: 10px 20px;
+  }
+
+  p {
+    font-size: 18px;
+  }
+
+  textarea {
+    width: 430px;
+  }
+
+  .likes-counter {
+    font-size: 15px;
+  }
+
+  .date {
+    margin-bottom: 10px;
+  }
 }
