--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,10 +6,59 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: rgb(170, 162, 162);
+  background-color: #f6f0c4;
+  background-image: linear-gradient(315deg, #f6f0c4 0%, #d99ec9 74%);
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
+}
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.main-container {
+  background-color: #f0f0f0;
+  padding: 20px;
+  margin-top: 20px;
+  width: 300px;
+  box-shadow: 0.7rem 0.5rem black;
+  border: 1px solid black;
+}
+.submit-button {
+  background-color: #f6f0c4;
+  background-image: linear-gradient(315deg, #f6f0c4 0%, #d99ec9 74%);
+  border-radius: 29px;
+  padding: 10px;
+  border: 1px solid pink;
+}
+.characters {
+  font-size: 10px;
+}
+.Thoughtlist-container {
+  display: flex;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+.like-button {
+  background-color: #f6f0c4;
+  background-image: linear-gradient(315deg, #f6f0c4 0%, #d99ec9 74%);
+  border-radius: 50%;
+  width: 30px;
+  height: 30px;
+  border: 1px solid pink;
+  align-content: center;
+}
+.like-button:hover {
+  background-color: #6b0f1a;
+  background-image: linear-gradient(315deg, #df5c6b 0%, #e23999 74%);
+  transform: scale(1.3);
+  cursor: pointer;
 }
