--- a/code/src/index.css
+++ b/code/src/index.css
@@ -21,7 +21,7 @@ code {
 article {
   border: solid 1px black;
   margin: 20px 0 20px 0;
-  height: 150px;
+  height: 180px;
   box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
   -webkit-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
   -moz-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
@@ -33,7 +33,8 @@ article {
 form {
   background-color: #F2F0F0;
   border: solid 1px black;
-  height: 180px;
+  height: 200px;
+  margin-top: 20px;
   box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
   -webkit-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
   -moz-box-shadow: 10px 9px 0px -1px rgba(0,0,0,1);
@@ -117,7 +118,7 @@ label {
 }
 
 .date {
-  margin-left: 150px;
+  margin-left: 120px;
   color:rgb(173, 173, 173);
 }
 
