--- a/code/src/index.css
+++ b/code/src/index.css
@@ -52,6 +52,10 @@ textarea {
   font-family: 'Rubik', sans-serif;
 }
 
+.heart {
+  margin: 10px;
+}
+
 .send-button:hover {
   transform: scale(1.05);
   cursor: pointer;
