trying to get the background to work

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -99,6 +99,8 @@ textarea.red-text {
   text-align: right;
 }
 
+/*---- MEDIA QUERIES ----*/
+
 @media (min-width: 768px) {
   .main-container {
     width: 450px;
