--- a/code/src/index.css
+++ b/code/src/index.css
@@ -32,6 +32,7 @@ form {
 .input {
   height: 70px;
   margin-bottom: 13px;
+  resize: vertical;
 }
 
 .form-button {
@@ -51,6 +52,7 @@ form {
   padding: 10px;
   box-shadow: 8px 8px;
   margin-bottom: 20px;
+  overflow-wrap: break-word;
 }
 
 .input-container {
