--- a/code/src/index.css
+++ b/code/src/index.css
@@ -34,6 +34,7 @@ header {
   margin-top: 50px;
   margin-bottom: 20px;
   text-align: center;
+  max-width: 375px;
 }
 
 .page {
@@ -41,14 +42,12 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  width: 375px;
+  width: 100%;
 }
 
 .container {
-  width: 85%;
-  justify-content: center;
-  display: flex;
-  flex-direction: column;
+  width: 375px;
+  margin: 0 auto;
 }
 
 /* THOUGHTFORM*/
@@ -62,7 +61,7 @@ h2 {
   padding: 20px;
   border: 1px solid;
   box-shadow: 5px 10px;
-  width: 100%;
+  margin: 10px;
 }
 
 .btn-happy-thought {
@@ -97,7 +96,7 @@ h2 {
 /* THOUGHT MESSAGES */
 .thought-box {
   border: 1px solid black;
-  margin-top: 20px;
+  margin: 20px 10px 20px 10px;
   padding: 1em;
   box-shadow: 7px 10px;
   font-family: "Roboto", sans-serif;
