--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,7 +1,21 @@
+body {
+  font-family: 'Roboto', sans-serif;
+  background-image: url("/background-img.jpg");
+}
+
 h1 {
+ font-family: 'Pacifico', cursive;
+}
+
+h2 {
   font-size: 1em;
-  font-weight: 400;
+  font-weight: 600;
   padding:0;
+}
+
+textarea:focus {
+  outline: none;
+  border: 2px solid pink;
 }
 
 .all-thoughts {
@@ -10,17 +24,24 @@ h1 {
   justify-content: center;
   align-items: center;
 }
+
 .thought {
- border: 1px solid black; 
+ border: 1px solid black;
+ background-color: white; 
  box-shadow: 7px 7px black;
  margin: 25px 0 25px 0;
  width: 360px;
  padding: 20px 0 20px 10px;
 }
 
+.messages {
+  max-width: 350px;
+  overflow-wrap: break-word;
+}
 
 .post-thought-container {
   display: flex;
+  background-color: rgb(224, 224, 224);
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -37,9 +58,17 @@ h1 {
 }
 
 .send-btn {
+  display: inline-block;
+  border: none;
   margin: 10px 0 10px 20px;
+  padding: 5px 15px 5px 15px;
+  border-radius: 20px;
 }
 
+.send-btn:hover {
+  border: 2px solid pink;
+  background-color: pink;
+}
 .likes-wrapper {
   display: flex;
   justify-content: space-between;
@@ -56,18 +85,34 @@ h1 {
   position: relative;
 }
 
+.heart-icon-radius:hover {
+  background-color: pink;
+}
+
 .heart-icon {
   width: 20px;
   height: 20px;
   position: absolute;
 }
 
+.heart-icon:hover {
+  width: 25px;
+  height: 25px;
+}
+
 .heart-count {
-  margin-right: 150px;
+  color: grey;
+  font-size: .8em;
+  margin-right: 160px;
 }
 
 .date {
   font-size: .8em;
   color: grey;
   margin-right: 10px;
+}
+
+footer a {
+  text-decoration: none;
+  color: black;
 }
