--- a/code/src/index.css
+++ b/code/src/index.css
@@ -6,6 +6,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  position: relative;
 }
 
 code {
@@ -96,7 +97,8 @@ label {
 .sent-messages {
   font-family: 'Roboto Mono', monospace;
   font-size: 16px;
-  margin: 15px 0 0 15px;
+  margin: 15px 15px 0 15px;
+  overflow-wrap: break-word;
 }
 
 .heart-btn {
@@ -126,6 +128,13 @@ label {
   margin: 15px 0 5px 15px;
 }
 
+footer {
+  position:sticky;
+  bottom: 0;
+  background-color: #fff;
+  width: 390px;
+}
+
 @media (min-width: 1025px) {
 
   label {
@@ -136,4 +145,5 @@ label {
   .send-btn {
     font-size: 16px;
   }
+
 }
