Fixed so that you'll have to write at least 6 and max 140 characters

--- a/code/src/index.css
+++ b/code/src/index.css
@@ -29,6 +29,14 @@ body {
   resize: vertical;
 }
 
+.incorrect-number-of-characters {
+  color: red;
+}
+
+.correct-number-of-characters {
+  color: #000;
+}
+
 button {
   border-radius: 15px;
   background-color: rgb(245, 169, 169);
