--- a/code/src/index.css
+++ b/code/src/index.css
@@ -64,12 +64,23 @@ form {
   flex-direction: row;
 }
 
-.heart-btn {
+button {
   border: none;
   border-radius: 50%;
   width: 40px;
   height: 40px;
+  background-color: pink;
 }
+
+button:hover {
+  background-color: #E75480;
+}
+
+.zeroClicks {
+  background-color: lightgray;
+}
+
+
 
 .likes-amount {
   font-size: 12px;
