--- a/code/src/index.css
+++ b/code/src/index.css
@@ -60,6 +60,7 @@ textarea:focus {
 .send-btn {
   display: inline-block;
   border: none;
+  -webkit-appearance: none;
   margin: 10px 0 10px 20px;
   padding: 5px 15px 5px 15px;
   border-radius: 20px;
@@ -68,6 +69,7 @@ textarea:focus {
 .send-btn:hover {
   border: 2px solid pink;
   background-color: pink;
+  -webkit-text-fill-color: pink;
 }
 .likes-wrapper {
   display: flex;
