--- a/code/src/index.css
+++ b/code/src/index.css
@@ -130,7 +130,7 @@ h2 {
   display: flex;
   align-items: center;
   margin: 0 0.5em;
-  margin-top: 0.2em;
+  justify-content: center;
 }
 
 .heart-btn {
