--- a/code/src/index.css
+++ b/code/src/index.css
@@ -124,6 +124,15 @@ h2 {
   align-items: center;
 }
 
+.date-text {
+  color: var(--clr-grey);
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  margin: 0 0.5em;
+  justify-content: center;
+}
+
 .likes {
   color: var(--clr-grey);
   font-size: 14px;
