--- a/code/src/index.css
+++ b/code/src/index.css
@@ -129,9 +129,9 @@ h2 {
   font-size: 14px;
   display: flex;
   align-items: center;
-  margin: 0 0.5em;
   justify-content: center;
   flex: auto;
+  margin-left: 50px;
 }
 
 .likes {
