--- a/code/src/index.css
+++ b/code/src/index.css
@@ -1,13 +1,345 @@
-body {
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+  padding: 0;
+}
+
+:root {
+  --first: #000000ec;
+  --second: #f7aed7;
+  --third: #feddf0;
+  --fourth: #F2B8C6;
+
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont,
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background: radial-gradient(circle, rgba(242,184,198,1) 0%, rgba(255,255,255,1) 50%, rgba(242,184,198,1) 100%);
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Space Mono',
     monospace;
+    color: var(--first);
+}
+
+
+/**********LOADER************/
+
+@keyframes spin {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.loader-overlay {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  background: #fff;
+}
+
+.loader-spinner {
+  display: inline-block;
+  width: 100px;
+  border-width: 50px;
+  border-top-style: solid;
+  border-bottom-style: solid;
+  border-top-color: #fff;
+  border-bottom-color: var(--second);
+  border-radius: 50%;
+  animation: spin 3s linear infinite;
+}
+
+
+/**********CARDS LAYOUT************/
+
+.thoughts-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 350px;
+  margin: 0 auto;
+}
+
+form {
+  border: 2px solid var(--first);
+  width: 90%;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  margin-top: 2rem;
+  margin-bottom: 1rem;
+  padding: 1rem;
+  box-shadow: 6px 6px var(--first);
+  background-color: #fff;
+}
+
+textarea {
+  width: 90%;
+  padding: 10px;
+  font-family: 'Space Mono', monospace;
+  border: 1px solid var(--first);
+}
+
+.thought-container {
+  width: 90%;
+  border: 2px solid var(--first);
+  height: 140px;
+  margin: 1rem 0;
+  padding: 1rem;
+  box-shadow: 6px 6px var(--first);
+  overflow-wrap: break-word;
+  font-family: 'Space Mono', monospace;
+  background-color: #fff;
+}
+
+.message {
+  height: 60px;
+  padding: 1rem 0;
+}
+
+.like-and-date-wrapper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.like {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+}
+
+.send-heart {
+  margin: 8px;
+  font-size: 1rem;
+}
+
+.heart {
+  font-size: 1.4rem;
+  position: absolute;
+  right: 12px;
+  top: 9px;
+}
+
+.date {
+  display: flex;
+  align-items: center;
+}
+
+/**********TEXT AND TITLES************/
+
+.form-title {
+  font-size: 1.1rem;
+  font-weight: normal;
+  margin-bottom: 1rem;
+  font-family: 'Space Mono', monospace;;
+}
+
+
+/**********BUTTONS************/
+
+.button-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 100%;
+  align-items: flex-end;
+  margin-top: 15px;
+  font-family: 'Space Mono', monospace;;
+}
+
+.send-button {
+  border-radius: 20px;
+  border: none;
+  background-color: var(--third);
+  width: fit-content;
+  height: 40px;
+  padding: 5px;
+  box-shadow: 0px 10px 10px -7px #d87093;
+  font-size: 0.9rem;
+  font-family: 'Space Mono', monospace;
+}
+
+.send-button:active {
+  background-color: var(--third);
+}
+
+.heart-button {
+  background-color: var(--second);
+  border-radius: 50%;
+  border: none;
+  position: relative;
+  margin-right: 10px;
+  width: 45px;
+  height: 45px;
+}
+
+.heart-button:active {
+  background-color: var(--third);
+  border-radius: 50%;
+  border: none;
+  position: relative;
+  margin-right: 10px;
+  width: 45px;
+  height: 45px;
+}
+
+/* .liked {
+  background-color: var(--second);
+} */
+
+
+
+
+/**********HEART ANIMATION************/
+
+.heartfall {
+  font-size: 1rem;
+}
+
+@-webkit-keyframes heartsfall-fall {
+  0% {
+    top:-10%
+  }
+  100% {
+    top:100%
+  }
+}
+@-webkit-keyframes heartsfall-shake {
+  0% {
+    -webkit-transform:translateX(0px);
+    transform:translateX(0px)
+  }
+  50% {
+    -webkit-transform:translateX(80px);
+    transform:translateX(80px)
+  }
+  100% {
+    -webkit-transform:translateX(0px);
+    transform:translateX(0px)
+  }
+}
+@keyframes heartsfall-fall {
+  0% {
+    top:-10%
+  }
+  100% {
+    top:100%
+  }
+}
+@keyframes heartsfall-shake {
+  0% {
+    transform:translateX(0px)
+  }
+  50% {
+    transform:translateX(80px)
+  }
+  100%{transform:translateX(0px)
+  }
+}
+
+.heartfall {
+  position:fixed;
+  top:-10%;
+  z-index:9999;
+  -webkit-user-select:none;
+  -moz-user-select:none;
+  -ms-user-select:none;
+  user-select:none;
+  cursor:default;
+  -webkit-animation-name:heartsfall-fall,heartsfall-shake;
+  -webkit-animation-duration:10s,3s;
+  -webkit-animation-timing-function:linear,ease-in-out;
+  -webkit-animation-iteration-count:infinite,infinite;
+  -webkit-animation-play-state:running,running;
+  animation-name:heartsfall-fall,heartsfall-shake;
+  animation-duration:10s,3s;
+  animation-timing-function:linear,ease-in-out;
+  animation-iteration-count:infinite,infinite;
+  animation-play-state:running,running
+}
+
+.heartfall:nth-of-type(0) {
+  left:1%;
+  -webkit-animation-delay:0s,0s;
+  animation-delay:0s,0s
+}
+
+.heartfall:nth-of-type(1) {
+  left:10%;
+  -webkit-animation-delay:1s,1s;
+  animation-delay:1s,1s
+}
+
+.heartfall:nth-of-type(2) {
+  left:20%;
+  -webkit-animation-delay:6s,.5s;
+  animation-delay:6s,.5s
+}
+
+.heartfall:nth-of-type(3) {
+  left:30%;
+  -webkit-animation-delay:4s,2s;
+  animation-delay:4s,2s
+}
+
+.heartfall:nth-of-type(4) {
+  left:40%;
+  -webkit-animation-delay:2s,2s;
+  animation-delay:2s,2s
+}
+
+.heartfall:nth-of-type(5) {
+  left:50%;
+  -webkit-animation-delay:8s,3s;
+  animation-delay:8s,3s
+}
+
+.heartfall:nth-of-type(6) {
+  left:60%;
+  -webkit-animation-delay:6s,2s;
+  animation-delay:6s,2s
+}
+
+.heartfall:nth-of-type(7) {
+  left:70%;
+  -webkit-animation-delay:2.5s,1s;
+  animation-delay:2.5s,1s
+}
+
+.heartfall:nth-of-type(8) {
+  left:80%;
+  -webkit-animation-delay:1s,0s;
+  animation-delay:1s,0s
+}
+
+.heartfall:nth-of-type(9) {
+  left:90%;
+  -webkit-animation-delay:3s,1.5s;
+  animation-delay:3s,1.5s
+}
+
+
+/**********MEDIA QUERIES************/
+
+@media screen and (min-width: 768px) {
+  .thoughts-container {
+    width: 550px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .thoughts-container {
+    width: 650px;
+  }
 }
